[update] index file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
 
     <h1>HELLO WORLD</h1>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, iste dicta ratione, facere voluptates ipsam accusantium voluptate magnam placeat tenetur beatae. Dignissimos accusamus quaerat soluta non deserunt atque sequi repudiandae.</p>
     
 </body>
 </html>
