--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>HELLO WORLD</h1>
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, iste dicta ratione, facere voluptates ipsam accusantium voluptate magnam placeat tenetur beatae. Dignissimos accusamus quaerat soluta non deserunt atque sequi repudiandae.</p>
+
+    <h2>Hello World più piccolo</h2>
     
 </body>
 </html>
