[update] index file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, iste dicta ratione, facere voluptates ipsam accusantium voluptate magnam placeat tenetur beatae. Dignissimos accusamus quaerat soluta non deserunt atque sequi repudiandae.</p>
 
     <h2>Hello World più piccolo</h2>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae non exercitationem, veritatis quos enim nesciunt suscipit quis minus consequuntur ratione asperiores nihil labore a natus, quae fugit! Amet, esse incidunt!</p>
     
 </body>
 </html>
